--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 <body>
 
 <p>
-My photos:
+My photo1:
 < img src="https://i.postimg.cc/QtpRzKPC/20220402194455.jpg" alt="Smiley face" ></p >
 
 <p>
-My photos:
+My photo2:
 < img src="https://i.postimg.cc/gJFTWkF7/20230307091433.jpg" alt="Computer man" ></p >
 
 <p>
