--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 
 <p>
 My photo1:
-< img src="https://i.postimg.cc/QtpRzKPC/20220402194455.jpg" alt="Smiley face" ></p >
+< img src="https://i.postimg.cc/QtpRzKPC/20220402194455.jpg"></p >
 
 <p>
 My photo2:
-< img src="https://i.postimg.cc/gJFTWkF7/20230307091433.jpg" alt="Computer man" ></p >
+< img src="https://i.postimg.cc/gJFTWkF7/20230307091433.jpg"></p >
 
 <p>
 
