--- a/image.html
+++ b/image.html
@@ -7,12 +7,12 @@
 <body>
 
 <p>
-My photo1:
-< img src="https://i.postimg.cc/QtpRzKPC/20220402194455.jpg" >
+My photos:
+< img src="https://i.postimg.cc/QtpRzKPC/20220402194455.jpg">
 
 <p>
-My photo2:
-< img src="https://i.postimg.cc/gJFTWkF7/20230307091433.jpg" >
+My photos:
+< img src="https://i.postimg.cc/gJFTWkF7/20230307091433.jpg">
 
 <p>
 
