--- a/image.html
+++ b/image.html
@@ -7,16 +7,15 @@
 <body>
 
 <p>
-My photos:
-< img src="https://i.postimg.cc/QtpRzKPC/20220402194455.jpg">
+photo1:
+<img src="https://i.postimg.cc/QtpRzKPC/20220402194455.jpg"></p>
 
 <p>
-My photos:
-< img src="https://i.postimg.cc/QtpRzKPC/20220402194455.jpg">
+photo2:
+<img src="https://i.postimg.cc/gJFTWkF7/20230307091433.jpg"></p>
 
 <p>
 
-</p >
-
+<p></p>
 </body>
 </html>
