--- a/index.html
+++ b/index.html
@@ -1,43 +1,12 @@
-<!DOCTYPE html>
-
-<html>
-
-    <head>
-
-        <meta charset="UTF-8">
-
-        <title>页面标题(w3cschool.cn)</title>
-
-    </head>
-
-    <body>
-
-        <h1>My first heading</h1>
-
-        <p>I am Gloria.</p >
-
-    </body>
-
-</html>
-<!DOCTYPE html>
-<html>
-<head> 
-<meta charset="utf-8"> 
-<title>W3Cschool教程(w3cschool.cn)</title> 
-</head>
-<body>
-
-<p>
-My photo1:
-< img src="https://i.postimg.cc/QtpRzKPC/20220402194455.jpg" >
-
-<p>
-My photo2:
-< img src="https://i.postimg.cc/gJFTWkF7/20230307091433.jpg" >
-
-<p>
-
-</p >
-
-</body>
-</html>
+<!DOCTYPE html> 
+ <html> 
+ <head> 
+ <title>Page Title</title> 
+ </head> 
+ <body> 
+   <h1>My First Heading</h1> 
+ <p>My name is Gloria from 21IT1.</p > 
+ <h2>My Photo</h2> 
+ < img src="https://i.postimg.cc/QtpRzKPC/20220402194455.jpg" 
+   </body> 
+ </html> 
