--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
    <h1>My First Heading</h1> 
  <p>My name is Gloria from 21IT1.</p > 
  <h2>My Photo</h2> 
- < img src="https://i.postimg.cc/QtpRzKPC/20220402194455.jpg" 
+ < img src="https://i.postimg.cc/QtpRzKPC/20220402194455.jpg" >
    </body> 
  </html> 
