--- a/index.html
+++ b/index.html
@@ -4,32 +4,7 @@
 
  <h1>My First Heading</h1> 
  <p>My first paragraph.</p > 
- </p > I am Gloria.</p > 
+ </p > I am Gloria, from 21 IT 1.</p > 
 
-<p>I'm Chloe, IT Program Manager at Nature Care Skin Care Company. My hobbies are playing games and writing code. I love my department and my role.</p >
 
-<!DOCTYPE html>
-<html>
-<head> 
-<meta charset="utf-8"> 
-<title>Chloe</title> 
-</head>
-<body>
 
-<p>
-My photos:
-< img src="https://i.postimg.cc/QtpRzKPC/20220402194455.jpg">
-
-<p>
-My photos:
-< img src="https://i.postimg.cc/gJFTWkF7/20230307091433.jpg">
-
-<p>
-
-</p >
-
-</body>
-</html>
- 
- </body> 
- </html> 
