--- a/second.html
+++ b/second.html
@@ -1,1 +1,22 @@
-
+<!DOCTYPE html>
+<html>
+ <head>
+  <meta charset="utf-8">
+  <title></title>
+ </head>
+ <body>
+  <form action="" method="">
+   <input type="text" name="1" id="1" value="Identify the subjects to be Interviewed and design aquestionnaire" style="width: 400px; height: 100px; word-break: break-all;"/>
+   <p>&#8595;</p>
+   <input type="text" name="1" id="1" value="Distribute the questionnaire" style="width: 200px; height: 100px; word-break: break-all;"/>
+    <p>&#8595;</p>
+   <input type="text" name="1" id="1" value="Recall the questionnaire" style="width: 200px; height: 100px; word-break: break-all;"/>
+    <p>&#8595;</p>
+   <input type="text" name="1" id="1" value="Filter obtained results using the cross-tabulation technique" style="width: 350px; height: 100px; word-break: break-all;"/>
+    <p>&#8595;</p>
+   <input type="text" name="1" id="1" value="Analyze the data and evaluate the results obtained" style="width: 350px; height: 100px; word-break: break-all;"/>
+    <p>&#8595;</p>
+   <input type="text" name="1" id="1" value="Conclude whether improvements To the existing situation are needed" style="width: 410px; height: 100px; word-break: break-all;"/>
+  </form>
+ </body>
+</html>
