--- a/second.html
+++ b/second.html
@@ -20,7 +20,24 @@
   </form>
  </body>
 </html>
-<!DOCTYPE html> 
- <html> 
- <body>  
- </p > The questionnaire is a way for various industries in society to collect relevant information, and can be integrated and analyzed according to the collected information to obtain answers to questions, which helps investigators further analyze, process and improve relevant matters and formulate effective decisions and strategies. It can discover the relevant situation of the situation, and through the collection of a large amount of data, it can accumulate the understanding of the designated target population on the current situation and relevant opinions and suggestions, so as to effectively provide the reference basis for the corresponding affairs management for the investigator, so that it can have a basis in formulating long-term strategic planning.</p > 
+
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>W3Cschool教程(w3cschool.cn)</title>
+</head>
+
+<body>
+
+<h1>meaning</h1>
+
+<p>
+   he questionnaire is a way for various industries in society to collect relevant information, and can be integrated and analyzed according to the collected information to obtain answers to questions, which helps investigators further analyze, process and improve relevant matters and formulate effective decisions and strategies. <br/>
+    It can discover the relevant situation of the situation, and through the collection of a large amount of data, it can accumulate the understanding of the designated target population on the current situation and relevant opinions and suggestions, so as to effectively provide the reference basis for the corresponding affairs management for the investigator, so that it can have a basis in formulating long-term strategic planning.<br/>
+</p>
+
+
+</body>
+
+</html>
