--- a/index.html
+++ b/index.html
@@ -6,5 +6,26 @@
  <p>My first paragraph.</p > 
  </p > I am Gloria, from 21 IT 1.</p > 
 
+<!DOCTYPE html>
+<html>
+<head> 
+<meta charset="utf-8"> 
+<title>W3Cschool教程(w3cschool.cn)</title> 
+</head>
+<body>
+
+<p>
+photo1:
+<img src="https://i.postimg.cc/QtpRzKPC/20220402194455.jpg"></p>
+
+<p>
+photo2:
+<img src="https://i.postimg.cc/gJFTWkF7/20230307091433.jpg"></p>
+
+<p>
+
+<p></p>
+</body>
+</html>
 
 
