--- a/page3.html
+++ b/page3.html
@@ -23,8 +23,7 @@ photo2:
  <html> 
  <body> 
 
- <h1>My First Heading</h1> 
- <p>My first paragraph.</p > 
+ <h1>Survey Result</h1> 
  </p > The survey subjects are all employees who have worked in the company for a long time and have a basic understanding of the company. They believe that increasing sales, establishing brand awareness, developing new products and expanding product range are the current goals of the company. They also hope that the company will become better and better by enhancing and improving the website and implementing online sales platform.</p > 
 
 <p></p>
